--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Raghu Betina
+  name:              Ana Vasques
   url:               none
   email:             avasques@chicagobooth.edu
 
